# Godot-AI-Bridge

./: CLAUDE.md  LICENSE  PLAN-4.0.md  README.md  project.godot  sprite_demo.py  sprite_demo_32.py  sprite_demo_swing.py
addons/godot_ai_bridge/: plugin.cfg  plugin.gd
addons/godot_ai_bridge/editor/: activity_panel.gd  editor_bridge.gd  editor_routes.gd  editor_screenshot.gd  project_tools.gd  scene_tools.gd
addons/godot_ai_bridge/mcp_server/: client.py  editor_tools.py  pyproject.toml  runtime_tools.py  server.py  utils.py
addons/godot_ai_bridge/runtime/: event_accumulator.gd  input_injector.gd  runtime_annotation.gd  runtime_bridge.gd  runtime_routes.gd  runtime_screenshot.gd  snapshot.gd
addons/godot_ai_bridge/shared/: config.gd  http_server.gd  serialization.gd
godot_ai_bridge/: .gitignore  CLAUDE.md  README.md  install_gdunit4.sh
godot_ai_bridge/addons/godot_ai_bridge/: plugin.cfg  plugin.gd
godot_ai_bridge/addons/godot_ai_bridge/editor/: activity_panel.gd  editor_bridge.gd  editor_routes.gd  editor_screenshot.gd  scene_tools.gd  script_tools.gd
godot_ai_bridge/addons/godot_ai_bridge/mcp_server/: README.md  editor_tools.py  runtime_tools.py  server.py
godot_ai_bridge/addons/godot_ai_bridge/runtime/: runtime_bridge.gd  runtime_routes.gd  runtime_screenshot.gd  state_reader.gd
godot_ai_bridge/addons/godot_ai_bridge/shared/: config.gd  http_server.gd
godot_ai_bridge/mcp_server/: README.md  client.py  editor_tools.py  pyproject.toml  runtime_tools.py
godot_ai_bridge/test/: test_example.gd
