[project]
name = "godot-ai-bridge-mcp"
version = "1.0.0"
description = "MCP server for Godot AI Bridge — gives AI agents full control over Godot editor and running games"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0,<3",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
